[package]
name = "beaver"
version = "0.1.0"
authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for setting up Rust objects inspired by factory_bot"
homepage = "https://github.com/TaKO8Ki/beaver"
repository = "https://github.com/TaKO8Ki/beaver"
documentation = "https://docs.rs/beaver"
readme = "README.md"
keywords = ["test", "factory", "beaver"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.8", features = ["macros"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
